invalid_tests/expressions/test3.go
// Test 3: Invalid expression - missing operator
func main() {
    x := 10 20
}
}
